# gimp-plugin-djvu

./: README.md  configure.ac
src/: Makefile.am  djvuread.c  interface.c  interface.h  main.c  main.h  render.c
